# Nutrition-Fact-Reader

./: FASTAPI_FOLDER_STRUCTURE.md  README.md  pyproject.toml  snake_case_guidelines.md
src/app/: main.py
src/app/database/: connection.py
src/app/models/: models.py
src/app/repositories/: example_repository.py  metadata_repository.py
src/app/routers/: image.py  ocr.py
src/app/services/: image_service.py  ocr_service.py
src/app/tasks/: example_task.py
src/tests/: test_repositories.py
